k8s/dev/ingress-dev-standard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gfz-dev
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
  - host: dev.gfz.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
