k8s/dev/ingress-dev.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gfz-dev
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`dev.gfz.local`) && PathPrefix(`/api`)
    kind: Rule
    services:
    - name: backend
      port: 8080
  - match: Host(`dev.gfz.local`)
    kind: Rule
    services:
    - name: frontend
      port: 3000
